<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/_titleApp"
        style="@style/ThemeTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/callActivity"
        android:textSize="@dimen/text_title_default"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/_msgApp"
        style="@style/ThemeTextBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/ic_android"
        android:drawablePadding="10dp"
        android:text="@string/appJavaAndroid"
        app:layout_constraintEnd_toEndOf="@+id/_titleApp"
        app:layout_constraintStart_toStartOf="@+id/_titleApp"
        app:layout_constraintTop_toBottomOf="@+id/_titleApp" />

    <Button
        android:id="@+id/main_buttonStartActivity"
        style="@style/ThemeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:onClick="btStartActivity"
        android:text="@string/start_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_msgApp" />

    <Button
        android:id="@+id/main_buttonStartActivityForResult"
        style="@style/ThemeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:onClick="btStartActivityForResult"
        android:text="@string/start_activity_for_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_buttonStartActivityPutExtra" />

    <Button
        android:id="@+id/main_buttonStartActivityPutExtra"
        style="@style/ThemeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:onClick="btStartActivityPutExtra"
        android:text="@string/start_activity_with_put_extra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_buttonStartActivity" />

    <TextView
        android:id="@+id/_msgApp2"
        style="@style/ThemeTextBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/activity_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_buttonStartActivityForResult" />

    <TextView
        android:id="@+id/main_textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_msgApp2"
        tools:text="@string/tool_activity_result" />

</androidx.constraintlayout.widget.ConstraintLayout>